# tag

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  go.mod  go.sum  main.go  prompt.txt  rsrc.syso  spec.md  tag.manifest
.cursor/rules/: general.mdc  org.mdc
.github/workflows/: build-windows.yml
src/: main.rs  main.zig  sui_wrapper.c  undo_redo.zig  windows_api.zig  xml_generator.zig
winres/: winres.json
