[package]
name = "tag"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.5.0"
egui = "0.31"
# egui-winit = "0.31.1" # No longer needed directly with eframe
# egui_wgpu_backend = "0.34.0" # No longer needed directly with eframe
eframe = { version = "0.31", default-features = true } # Update eframe version
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
unicode-xid = "0.2.6"
# winit = "0.30.9" # No longer needed directly with eframe
xml-rs = "0.8.26"
mouse_position = "0.1.4"
windows = { version = "0.61.1", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
enigo = "0.3.0"
active-win-pos-rs = "0.9.0"
winapi = { version = "0.3.9", features = ["winuser"] }

[profile.release]
opt-level = 3
lto = true
strip = true # Also strip symbols for smaller binary
codegen-units = 1 # Maximize optimizations
